fixtures/oci1/invalid/signature-mismatch/obt.jws
eyJhbGciOiJFZERTQSIsImtpZCI6ImZpeHR1cmUtZWQyNTUxOSIsInR5cCI6IkpXUyJ9.eyJpZCI6InRlc3QtZml4dHVyZS0wLjEuMCIsImRvbWFpbiI6InRlc3QtZml4dHVyZSIsInZlcnNpb24iOiIwLjEuMCIsInByb3ZpZGVySWQiOiJvbnRvbG9neTpwYWN0LWZpeHR1cmVzIiwidHJ1c3RUaWVyIjoiVGllcjEiLCJwb2xpY3lTbmFwc2hvdElkIjoic2hhMjU2OmFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWEiLCJmaWxlcyI6eyJjb250ZXh0Ijoic2hhMjU2OmFiMGYyZDNjYjc2YzkyYmE0MzYzYzRjMjYyYjU1ZDY5ZmU2N2QwMjgzMjcxZjdhMTI1M2MyNmY1OTJmYTAxNWMiLCJ2b2NhYiI6InNoYTI1NjoxNDA0YWJlZTg2MTY5NTg4ZWQxYWUxNTFmYTBkYjgxNzcyN2MxYTQ1NzFkNDFiOTQxNWY3Yjc3ZTY5OWE4NzE4In0sInByZWNlZGVuY2UiOltdLCJkZW55V2lucyI6dHJ1ZSwibmJmIjoiMjAyNi0wMy0wMlQwMDowMDowMFoiLCJleHAiOiIyMDMwLTAzLTAyVDAwOjAwOjAwWiIsInJldkVwb2NoIjoxfQ.gVc1hdgM7JayRaxD-chXuX9huXPLeDjmS1ltIuAnivdA3KqAfviShl8uiBjiQTjShr97_EPeKwNf0GPpcjNDDA
